Archive2/d8/608ced5937ca5c/output
main.cpp: In function 'void qux(bar<T>)':
main.cpp:10:5: error: invalid use of 'struct foo<void>'
 { b.template foo<void>(); }
     ^
